Fixing sidebar on mobile

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -268,6 +268,19 @@ a {
   display: none;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: -1px;
+  z-index: 100;
+
+  &.header {
+    @media (min-width: 600px) {
+      display: none;
+    }
+  }
+}
+
 .main-nav {
 
   top: 0;
@@ -278,10 +291,39 @@ a {
   }
 
   nav {
-    @extend .page-header;
+    background-color: $color-0;
+    color: white;
+
+    width: 100%;
+    height: $baseline-height * 3;
+    padding: 0 $col-gutter-large;
+    text-align: center;
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.24);
+    box-shadow: 0 4px rgba(0, 0, 0, 0.18);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    @include type-h5;
+
+    @include for-phone-down {
+      padding: 0 $col-gutter-small;
+    };
+
+    &:before,
+    &:after {
+      content: '';
+      display: table;
+    }
 
     ul {
-      @extend .container;
+      width: $container-max-width;
+      max-width: 100%;
+      margin: auto;
+      text-align: left;
       padding-left: 0;
       list-style: none;
       height: $baseline-height*3;
@@ -327,12 +369,14 @@ a {
   }
 
   @include for-phone-down {
-    position: fixed;
-    top: 0;
+    // position: fixed;
+    // top: 0;
     right: 0;
+    left: auto;
     z-index: 1000;
 
     .hamburger {
+      display: block;
       cursor: pointer;
       width: 22px;
       height: 22px;
@@ -379,6 +423,7 @@ a {
       }
 
       .close {
+        display: block;
         width: 100%;
         margin-right: $elements-padding;
         margin-bottom: $elements-padding*2;
@@ -419,13 +464,6 @@ a {
   position: relative;
   z-index: 1;
   box-shadow: 0 8px rgba(0, 0, 0, 0.24);
-}
-
-.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 100;
 }
 
 .page {
